--- a/package.json
+++ b/package.json
@@ -19,6 +19,6 @@
     "passport-facebook": "~2.1.1",
     "passport-google-oauth": "~1.0.0",
     "passport-local": "~1.0.0",
-    "passport-twitter": "~1.0.4"
+    "passport-twitter": "^0.1.5"
   }
 }
